initiative reports update 7